tests/misc/tnoop.nim
discard """
  line: 10
  errormsg: "attempting to call undeclared routine: 'a'"
"""


var
  a: int

a()
